--- a/src/components/Cards/cards.module.css
+++ b/src/components/Cards/cards.module.css
@@ -8,7 +8,7 @@
   margin-bottom: var(--space-4x);
 }
 
-.cardsWrapper p {
+:where(.cardsWrapper p) {
   font-size: 14px;
   line-height: 24px; /* 171.429% */
 }
@@ -39,6 +39,13 @@
 
 .link:hover span {
   opacity: 0.7;
+}
+
+.cardTitle {
+  font-weight: 525;
+  margin-bottom: var(--space-4x);
+  font-size: 18px;
+  color: var(--foreground);
 }
 
 @media screen and (min-width: 769px) {
