--- a/src/components/TabGrid/GridCard.module.css
+++ b/src/components/TabGrid/GridCard.module.css
@@ -4,10 +4,28 @@
   padding: var(--space-6x);
   align-items: start;
   gap: var(--space-6x);
+  border-right: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
 
   &:hover .cardFooter {
     opacity: 1;
   }
+}
+
+[data-columns="1"] > .card:nth-child(1) {
+  border-top: 1px solid var(--border);
+}
+
+[data-columns="2"] > .card:nth-child(-n + 2) {
+  border-top: 1px solid var(--border);
+}
+
+[data-columns="3"] > .card:nth-child(-n + 3) {
+  border-top: 1px solid var(--border);
+}
+
+[data-columns="4"] > .card:nth-child(-n + 4) {
+  border-top: 1px solid var(--border);
 }
 
 .card:hover {
