removing unused styles

--- a/src/components/LayoutHero/LayoutHero.astro
+++ b/src/components/LayoutHero/LayoutHero.astro
@@ -1,5 +1,5 @@
 ---
-import { Button, buttonVariants, Typography } from "@chainlink/blocks"
+import { buttonVariants, Typography } from "@chainlink/blocks"
 import styles from "./LayoutHero.module.css"
 
 interface Props {
