--- a/src/components/ToolsUtilitiesGrid/toolsUtilities.module.css
+++ b/src/components/ToolsUtilitiesGrid/toolsUtilities.module.css
@@ -43,3 +43,15 @@
 .arrow {
   opacity: 0;
 }
+
+@media screen and (max-width: 1135px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 525px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
