--- a/src/layouts/DocsV3Layout/DocsV3Layout.astro
+++ b/src/layouts/DocsV3Layout/DocsV3Layout.astro
@@ -43,14 +43,14 @@ const toolsAndUtilities = [
     image: "js-logo.svg",
     imageAlt: "JavaScript SDK icon",
     label: "Javascript SDK",
-    link: "/ccip/tutorials/js-sdk",
+    link: "https://github.com/smartcontractkit/ccip-javascript-sdk",
     description: "Integrate CCIP functionality directly into your web applications for EVM-compatible chains.",
   },
   {
     image: "ts-logo.svg",
     imageAlt: "CLI icon",
     label: "CLI",
-    link: "/ccip/tutorials/cli",
+    link: "https://github.com/smartcontractkit/ccip-tools-ts",
     description: "TypeScript command-line interface and library designed for interacting with deployed CCIP contracts.",
   },
   {
@@ -81,7 +81,7 @@ const toolsAndUtilities = [
     image: "direct-stacking-logo.svg",
     imageAlt: "Direct Staking icon",
     label: "Direct Staking",
-    link: "/staking",
+    link: "https://github.com/Aphyla/chainlink-csr",
     description:
       "Stake native tokens on supported L2 networks and receive liquid staked tokens directly on the same chain.",
   },
