add resources grid

--- a/src/layouts/DocsV3Layout/DocsV3Layout.astro
+++ b/src/layouts/DocsV3Layout/DocsV3Layout.astro
@@ -8,6 +8,7 @@ import LeftSidebar from "~/components/LeftSidebar/LeftSidebar.astro"
 import PageContent from "~/components/PageContent/PageContent.astro"
 import { TabGrid } from "~/components/TabGrid/TabGrid"
 import LayoutHero from "~/components/LayoutHero/LayoutHero.astro"
+import ResourceSection from "~/components/Resource/ResourceSection.astro"
 
 interface Props {
   frontmatter: BaseFrontmatter
@@ -29,6 +30,31 @@ const formattedContentTitle = `${frontmatter.title} | ${CONFIG.SITE.title}`
 const currentPage = new URL(Astro.request.url).pathname
 
 const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWallet
+
+// Example resources data
+const exampleResources = [
+  {
+    label: "Token Pool Types",
+    description:
+      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
+    link: "/resources/token-pool-types",
+    type: "article",
+  },
+  {
+    label: "Token Pool Types",
+    description:
+      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
+    link: "/resources/token-pool-types",
+    type: "article",
+  },
+  {
+    label: "Token Pool Types",
+    description:
+      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
+    link: "/resources/token-pool-types",
+    type: "article",
+  },
+]
 
 // Example tutorial data
 const exampleTutorials = [
@@ -144,8 +170,9 @@ const exampleTutorials = [
           ]}
           image="/images/ccip/ccip-hero.png"
         />
+        <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
+        <ResourceSection title="Resources" resources={exampleResources} />
         <PageContent {titleHeading}>
-          <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
           <slot />
         </PageContent>
       </div>
