--- a/src/components/ToolsUtilitiesGrid/ToolsUtilitiesGrid.astro
+++ b/src/components/ToolsUtilitiesGrid/ToolsUtilitiesGrid.astro
@@ -13,7 +13,12 @@ const { links } = Astro.props
 ---
 
 <section class={styles.wrapper}>
-  <Typography variant="h2">Tools & Utilities</Typography>
+  <Typography
+    variant="h2"
+    style={{
+      fontSize: "32px",
+    }}>Tools & Utilities</Typography
+  >
 
   <div class={styles.container}>
     {links.map((link) => <ToolItem {...link} />)}
