--- a/src/layouts/DocsV3Layout/DocsV3Layout.astro
+++ b/src/layouts/DocsV3Layout/DocsV3Layout.astro
@@ -8,6 +8,7 @@ import LeftSidebar from "~/components/LeftSidebar/LeftSidebar.astro"
 import PageContent from "~/components/PageContent/PageContent.astro"
 import { TabGrid } from "~/components/TabGrid/TabGrid"
 import LayoutHero from "~/components/LayoutHero/LayoutHero.astro"
+import MediaSection from "~/components/MediaSection/MediaSection.astro"
 
 interface Props {
   frontmatter: BaseFrontmatter
@@ -146,6 +147,11 @@ const exampleTutorials = [
         />
         <PageContent {titleHeading}>
           <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
+          <MediaSection
+            heading="High-level architecture"
+            description="CCIP delivers cross-chain messages from a source chain to a destination chain by combining offchain consensus and onchain execution components."
+            image="/images/architecture.png"
+          />
           <slot />
         </PageContent>
       </div>
