--- a/src/components/ToolsUtilitiesGrid/ToolItem.astro
+++ b/src/components/ToolsUtilitiesGrid/ToolItem.astro
@@ -9,7 +9,7 @@ const { description, image, imageAlt, label, link } = Astro.props
 ---
 
 <a href={link} class={styles.card}>
-  <div class={styles.imageContainer}><img src={`/images/${image}`} alt={imageAlt} class={styles.image} /></div>
+  <div class={styles.imageContainer}><img src={image} alt={imageAlt} class={styles.image} /></div>
 
   <div class={styles.content}>
     <div>
