--- a/src/components/Resource/ResourceCard.astro
+++ b/src/components/Resource/ResourceCard.astro
@@ -1,11 +1,10 @@
 ---
-import { Typography, SvgArrowRightLong, SvgArrowRight, SvgArrowRight2 } from "@chainlink/blocks"
+import { Typography, SvgArrowRight2 } from "@chainlink/blocks"
 import type { ImageMetadata } from "astro"
 import styles from "./ResourceCard.module.css"
-import { ArrowDown } from "@chainlink/blocks/src/components/Shell/VerticalNavBar/icons"
 
 interface Props {
-  image?: ImageMetadata
+  image?: string | ImageMetadata
   imageAlt?: string
   label: string
   link: string
@@ -14,13 +13,15 @@ interface Props {
 }
 
 const { image, imageAlt, label, link, description, type } = Astro.props
+
+const imageSrc = typeof image === "string" ? image : image?.src
 ---
 
 <a href={link} class={styles.card}>
   {
-    image && (
+    imageSrc && (
       <div class={styles.imageWrapper}>
-        <img src={image.src} alt={imageAlt} class={styles.image} />
+        <img src={imageSrc} alt={imageAlt} class={styles.image} />
       </div>
     )
   }
@@ -28,7 +29,7 @@ const { image, imageAlt, label, link, description, type } = Astro.props
     <Typography
       variant="body-semi-l"
       style={{
-        marginBottom: "var(--space-2x)",
+        marginBottom: "var(--space-8x)",
       }}>{label}</Typography
     >
     <Typography variant="body-s" color="muted">
