--- a/src/layouts/DocsV3Layout/DocsV3Layout.astro
+++ b/src/layouts/DocsV3Layout/DocsV3Layout.astro
@@ -76,6 +76,12 @@ const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWall
       min-width: 0;
     }
 
+    @media screen and (max-width: 768px) {
+      #grid-main {
+        padding: 0 var(--space-12x) var(--doc-padding) var(--space-12x);
+      }
+    }
+
     @media (min-width: 50em) {
       main {
         display: grid;
