--- a/src/components/Cards/cards.module.css
+++ b/src/components/Cards/cards.module.css
@@ -62,5 +62,6 @@
 @media screen and (max-width: 425px) {
   .cardsWrapper {
     grid-template-columns: repeat(1, 1fr) !important;
+    margin-top: 0;
   }
 }
