--- a/src/components/TabGrid/TabGrid.module.css
+++ b/src/components/TabGrid/TabGrid.module.css
@@ -4,6 +4,7 @@
 .grid {
   display: grid;
   border-left: 1px solid var(--border);
+  margin: 36px 0;
 }
 
 .gridHeader {
@@ -59,5 +60,23 @@
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr !important;
+  }
+
+  .gridHeader > h2 {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .gridSection {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .gridHeader {
+    flex-direction: column;
+    align-items: start;
+    gap: var(--space-2x);
   }
 }
