move all new components to overview (index mdx) page

--- a/src/components/Cards/cards.module.css
+++ b/src/components/Cards/cards.module.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   border-left: 1px solid var(--border);
   border-top: 1px solid var(--border);
+  margin: 56px 0;
 }
 
 .cardsWrapper h6 {
