--- a/src/components/MediaSection/MediaSection.astro
+++ b/src/components/MediaSection/MediaSection.astro
@@ -14,7 +14,12 @@ const { heading, description, image, video } = Astro.props
 
 <section class={styles.section}>
   <div class={styles.textContent}>
-    <Typography variant="h2">{heading}</Typography>
+    <Typography
+      variant="h2"
+      style={{
+        fontSize: "32px",
+      }}>{heading}</Typography
+    >
     <Typography variant="body" color="muted">
       {description}
     </Typography>
