--- a/src/components/QuickLinkCard/QuickLinkCard.astro
+++ b/src/components/QuickLinkCard/QuickLinkCard.astro
@@ -1,10 +1,9 @@
 ---
 import { Typography } from "@chainlink/blocks"
-import type { ComponentType } from "astro/dist/runtime/server"
 import styles from "./QuickLinkCard.module.css"
 
 interface Link {
-  icon: ComponentType
+  icon: any
   label: string
   link: string
 }
