--- a/src/layouts/DocsV3Layout/DocsV3Layout.astro
+++ b/src/layouts/DocsV3Layout/DocsV3Layout.astro
@@ -6,21 +6,6 @@ import { BaseFrontmatter } from "~/content.config"
 import * as CONFIG from "~/config"
 import LeftSidebar from "~/components/LeftSidebar/LeftSidebar.astro"
 import PageContent from "~/components/PageContent/PageContent.astro"
-import { TabGrid } from "~/components/TabGrid/TabGrid"
-
-import ToolsUtilitiesGrid from "~/components/ToolsUtilitiesGrid/ToolsUtilitiesGrid.astro"
-import LayoutHero from "~/components/LayoutHero/LayoutHero.astro"
-import ResourceSection from "~/components/Resource/ResourceSection.astro"
-import MediaSection from "~/components/MediaSection/MediaSection.astro"
-import QuickLinkCard from "~/components/QuickLinkCard/QuickLinkCard.astro"
-import {
-  SvgBulletList,
-  SvgCrossChain,
-  SvgEyeOptic,
-  SvgStartup,
-  SvgTransactionRepeatRecurring,
-  SvgWaveSignal,
-} from "@chainlink/blocks"
 
 interface Props {
   frontmatter: BaseFrontmatter
@@ -42,214 +27,6 @@ const formattedContentTitle = `${frontmatter.title} | ${CONFIG.SITE.title}`
 const currentPage = new URL(Astro.request.url).pathname
 
 const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWallet
-
-const toolsAndUtilities = [
-  {
-    image: "ccip-logo.svg",
-    imageAlt: "CCIP API icon",
-    label: "CCIP API",
-    link: "/ccip/api",
-    description: "An API for message retrieval and lane latency information.",
-  },
-  {
-    image: "js-logo.svg",
-    imageAlt: "JavaScript SDK icon",
-    label: "Javascript SDK",
-    link: "https://github.com/smartcontractkit/ccip-javascript-sdk",
-    description: "Integrate CCIP functionality directly into your web applications for EVM-compatible chains.",
-  },
-  {
-    image: "ts-logo.svg",
-    imageAlt: "CLI icon",
-    label: "CLI",
-    link: "https://github.com/smartcontractkit/ccip-tools-ts",
-    description: "TypeScript command-line interface and library designed for interacting with deployed CCIP contracts.",
-  },
-  {
-    image: "hardhat-logo.svg",
-    imageAlt: "Hardhat icon",
-    label: "Hardhat Starter Kit",
-    link: "https://github.com/smartcontractkit/hardhat-starter-kit",
-    description:
-      "Ready-to-go boilerplate for basic CCIP use cases that help you get started building quickly with Hardhat.",
-  },
-  {
-    image: "foundry-logo.svg",
-    imageAlt: "Foundry icon",
-    label: "Foundry Starter Kit",
-    link: "https://github.com/smartcontractkit/foundry-starter-kit",
-    description:
-      "Ready-to-go boilerplate for basic CCIP use cases that help you get started building quickly with Foundry.",
-  },
-  {
-    image: "npm-logo.png",
-    imageAlt: "NPM icon",
-    label: "CCIP Contracts NPM",
-    link: "https://www.npmjs.com/package/@chainlink/contracts-ccip",
-    description:
-      "An npm package providing Solidity smart contract implementations to integrate CCIP into your EVM-based project.",
-  },
-  {
-    image: "direct-stacking-logo.svg",
-    imageAlt: "Direct Staking icon",
-    label: "Direct Staking",
-    link: "https://github.com/Aphyla/chainlink-csr",
-    description:
-      "Stake native tokens on supported L2 networks and receive liquid staked tokens directly on the same chain.",
-  },
-]
-// Example resources data
-const exampleResources = [
-  {
-    label: "Token Pool Types",
-    description:
-      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
-    type: "article",
-  },
-  {
-    label: "Token Pool Types",
-    description:
-      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
-    type: "article",
-  },
-  {
-    label: "Token Pool Types",
-    description:
-      "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
-    type: "article",
-  },
-]
-
-// Example tutorial data
-const exampleTutorials = [
-  {
-    name: "EVM",
-    links: [
-      {
-        title: "Acquire Test Tokens",
-        description: "Get test tokens in minutes; build and test cross-chain apps with zero friction.",
-        link: "/tutorials/acquire-test-tokens",
-      },
-      {
-        title: "Transfer Tokens",
-        description: "Unlock seamless token transfers from contracts; learn, code, and deploy.",
-        link: "/tutorials/transfer-tokens",
-      },
-      {
-        title: "Transfer Tokens with Data",
-        description: "Go beyond basic transfers with logic-infused token movements in your EVM contracts.",
-        link: "/tutorials/transfer-tokens-data",
-      },
-      {
-        title: "Using the Token Manager",
-        description: "Effortlessly manage CCTs by tracking, importing and organizing tokens from your dashboard.",
-        link: "/tutorials/token-manager",
-      },
-      {
-        title: "Using the JS SDK",
-        description: "Integrate CCIP in your frontend or backend effortlessly with JavaScript SDK.",
-        link: "/tutorials/js-sdk",
-      },
-      {
-        title: "Check Message Status",
-        description: "Retrieve real-time status of your offchain transaction from EVM.",
-        link: "/tutorials/check-message-status",
-      },
-      {
-        title: "Transfer Tokens Between EOAs",
-        description: "Send tokens offchain from an Externally Owned Account with clear steps.",
-        link: "/tutorials/transfer-tokens-eoa",
-      },
-      {
-        title: "Using the CLI",
-        description: "Use offchain tools from CCIP to simplify your Ethereum workflows.",
-        link: "/tutorials/cli",
-      },
-      {
-        title: "Deploy and Register a CCT",
-        description: "Use RemixIDE to launch and configure tokens for cross-chain transfers on CCIP.",
-        link: "/tutorials/deploy-register-cct",
-      },
-      {
-        title: "Register CCT Burn & Mint EOA",
-        description: "Implement burn-mint cross-chain token logic with CCIP using Hardhat or Foundry.",
-        link: "/tutorials/register-cct-burn-mint",
-      },
-      {
-        title: "Register CCT Lock & Mint EOA",
-        description: "Implement a lock-mint token registration workflow with CCIP and Hardhat or Foundry.",
-        link: "/tutorials/register-cct-lock-mint",
-      },
-      {
-        title: "Set Token Pool Rate Limits",
-        description: "Update rate limiter settings for your cross-chain tokens using Hardhat or Foundry.",
-        link: "/tutorials/token-pool-rate-limits",
-      },
-    ],
-  },
-  {
-    name: "Solana",
-    links: [
-      {
-        title: "Getting Started with Solana",
-        description: "Learn the basics of building on Solana blockchain.",
-        link: "/tutorials/solana-getting-started",
-      },
-      {
-        title: "Solana Token Transfers",
-        description: "Transfer tokens on the Solana blockchain.",
-        link: "/tutorials/solana-transfers",
-      },
-    ],
-  },
-  {
-    name: "Aptos",
-    links: [
-      {
-        title: "Getting Started with Aptos",
-        description: "Start building on the Aptos blockchain.",
-        link: "/tutorials/aptos-getting-started",
-      },
-    ],
-  },
-]
-
-// Quick links data
-const quickLinks = [
-  {
-    icon: SvgEyeOptic,
-    label: "View Network Configs",
-    link: "https://docs.chain.link/ccip/directory/mainnet",
-  },
-  {
-    icon: SvgTransactionRepeatRecurring,
-    label: "Check Transaction Status",
-    link: "https://ccip.chain.link/",
-  },
-  {
-    icon: SvgWaveSignal,
-    label: "View Lane Status",
-    link: "https://ccip.chain.link/status",
-  },
-  {
-    icon: SvgStartup,
-    label: "Get Testnet Tokens",
-    link: "https://tokenmanager.chain.link/",
-  },
-  {
-    icon: SvgCrossChain,
-    label: "Convert Chainlink tokens",
-    link: "https://www.transporter.io/",
-  },
-  {
-    icon: SvgBulletList,
-    label: "View the Changelog",
-    link: "https://dev.chain.link/changelog?product=CCIP",
-  },
-]
 ---
 
 <BaseLayout title={formattedContentTitle} metadata={frontmatter.metadata} pageTitle={frontmatter.title}>
@@ -262,27 +39,11 @@ const quickLinks = [
         <LeftSidebar currentPage={currentPage} section={frontmatter.section} />
       </aside>
       <div id="grid-main">
-
-        <LayoutHero
-          title="Build with CCIP"
-          description="CCIP makes it simple to move data, messages, and tokens across blockchains. Connect smart contracts on different networks as if they were one system, whether transferring stablecoins, powering cross-chain apps, or running multi-chain DeFi."
-          buttons={[
-            { label: "Get the SDK", link: "#" },
-            { label: "API Doc", link: "#" },
-          ]}
-          image="/images/ccip/ccip-hero.png"
-        />
-        <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
-        <ResourceSection title="Resources" resources={exampleResources} />
-        <QuickLinkCard links={quickLinks} />
-        <ToolsUtilitiesGrid links={toolsAndUtilities} />
-        <PageContent {titleHeading}>
-          <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
-          <MediaSection
-            heading="High-level architecture"
-            description="CCIP delivers cross-chain messages from a source chain to a destination chain by combining offchain consensus and onchain execution components."
-            image="/images/architecture.png"
-          />
+        <PageContent
+          {titleHeading}
+          disableDefaultStyles={frontmatter.disableDefaultStyles}
+          hideTitle={frontmatter.hideTitle}
+        >
           <slot />
         </PageContent>
       </div>
