--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -3,29 +3,31 @@ import { MarkdownHeading } from "astro"
 
 export type Props = {
   titleHeading: MarkdownHeading
+  disableDefaultStyles?: boolean
+  hideTitle?: boolean
 }
-const { titleHeading } = Astro.props
+const { titleHeading, disableDefaultStyles, hideTitle } = Astro.props
 ---
 
-<article id="article">
-  <h1 id={titleHeading.slug}>{titleHeading.text}</h1>
+<article id="article" data-disable-default-styles={disableDefaultStyles || undefined}>
+  {!hideTitle && <h1 id={titleHeading.slug}>{titleHeading.text}</h1>}
 
   <slot />
 </article>
 
 <style is:inline>
-  article :is(h1, h2, h3, h4, h5, h6) > a {
+  article:not([data-disable-default-styles]) :is(h1, h2, h3, h4, h5, h6) > a {
     display: inline-block;
     color: inherit;
     width: 100%;
   }
 
-  article astro-slot > :first-child {
+  article:not([data-disable-default-styles]) astro-slot > :first-child {
     margin-top: 0;
   }
 
   /* Using padding instead of margin so intersection observers work without spaces */
-  :where(article, astro-island, astro-slot) > section {
+  :where(article:not([data-disable-default-styles]), astro-island, astro-slot) > section {
     padding-top: var(--space-5x);
   }
 
@@ -38,130 +40,181 @@ const { titleHeading } = Astro.props
     This also keeps the spacing intact
     in case JS isn't loading on the page
   */
-  article > :where(h1, h2) {
+  article:not([data-disable-default-styles]) > :where(h1, h2) {
     margin-top: var(--space-5x) !important;
   }
 
-  article * {
+  article:not([data-disable-default-styles]) * {
     max-width: 100%;
     margin-bottom: 0;
   }
 
-  article a:not(:is(h1 a, h2 a, h3 a, h4 a, h5 a, h6 a)) {
+  article:not([data-disable-default-styles]) a:not(:is(h1 a, h2 a, h3 a, h4 a, h5 a, h6 a)) {
     color: var(--color-text-link);
   }
 
-  article :is(h1, h2, h3, h4, h5, h6, p, li) {
+  article:not([data-disable-default-styles]) :is(h1, h2, h3, h4, h5, h6, p, li) {
     word-break: break-word;
   }
 
-  article p {
+  article:not([data-disable-default-styles]) p {
     margin-bottom: 0;
   }
 
-  article :is(p, li) {
+  article:not([data-disable-default-styles]) :is(p, li) {
     line-height: 28px;
   }
 
-  article label {
+  article:not([data-disable-default-styles]) label {
     display: flex;
     align-items: center;
     gap: var(--space-2x);
   }
 
-  :where(article, article section, article astro-slot, article astro-island) > :not(section, astro-slot, astro-island) {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot,
+      article:not([data-disable-default-styles]) astro-island
+    )
+    > :not(section, astro-slot, astro-island) {
     margin-top: var(--space-5x);
   }
 
-  :where(article, article section, article astro-slot, article astro-island) > pre {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot,
+      article:not([data-disable-default-styles]) astro-island
+    )
+    > pre {
     margin-top: var(--space-2x);
   }
 
-  :where(article, article section) > :is(h1, h2, h3) + :not(section, astro-slot, astro-island, h5, h6) {
+  :where(article:not([data-disable-default-styles]), article:not([data-disable-default-styles]) section)
+    > :is(h1, h2, h3)
+    + :not(section, astro-slot, astro-island, h5, h6) {
     margin-top: var(--space-5x) !important;
   }
 
-  :where(article, article section) > :is(h4, h5, h6) + :not(section, astro-slot, astro-island) {
+  :where(article:not([data-disable-default-styles]), article:not([data-disable-default-styles]) section)
+    > :is(h4, h5, h6)
+    + :not(section, astro-slot, astro-island) {
     margin-top: var(--space-3x) !important;
   }
 
-  :where(article, article section, article astro-slot) > :is(h1, h2, h3, h4, h5, h6, li) {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > :is(h1, h2, h3, h4, h5, h6, li) {
     font-weight: bold;
     margin-top: 0;
   }
 
-  :where(article, article section, article astro-slot) > h1 {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > h1 {
     font-size: 32px;
   }
 
-  :where(article, article section, article astro-slot) > h2 {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > h2 {
     padding-top: var(--space-6x);
     font-size: 28px;
   }
 
-  :where(article, article section, article astro-slot) > h3 {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > h3 {
     padding-top: var(--space-8x);
     font-size: 24px;
   }
 
-  :where(article, article section, article astro-slot) > h4 {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > h4 {
     padding-top: var(--space-5x);
     font-size: 20px;
   }
 
-  :where(article, article section, article astro-slot) > :is(h5, h6) {
+  :where(
+      article:not([data-disable-default-styles]),
+      article:not([data-disable-default-styles]) section,
+      article:not([data-disable-default-styles]) astro-slot
+    )
+    > :is(h5, h6) {
     padding-top: var(--space-4x);
     font-size: 16px;
   }
 
-  article :is(ul, ol) {
+  article:not([data-disable-default-styles]) :is(ul, ol) {
     margin-top: var(--space-3x);
   }
 
-  article :is(ul, ol) > li,
-  article :is(ul, ol) > li > :is(ul, ol) {
+  article:not([data-disable-default-styles]) :is(ul, ol) > li,
+  article:not([data-disable-default-styles]) :is(ul, ol) > li > :is(ul, ol) {
     margin-top: var(--space-2x);
   }
 
-  article li > * {
+  article:not([data-disable-default-styles]) li > * {
     margin-top: var(--space-2x);
   }
 
-  article li {
+  article:not([data-disable-default-styles]) li {
     list-style-type: disc;
   }
 
-  article ul {
+  article:not([data-disable-default-styles]) ul {
     padding-left: calc(var(--space-4x) + 2px);
   }
 
-  article ol {
+  article:not([data-disable-default-styles]) ol {
     padding-left: var(--space-8x);
   }
 
   /* Offset line-height difference */
-  article li > :not(p):last-child {
+  article:not([data-disable-default-styles]) li > :not(p):last-child {
     margin-bottom: var(--space-3x);
   }
 
-  article ::marker {
+  article:not([data-disable-default-styles]) ::marker {
     font-weight: bold;
     color: var(--theme-text-light);
   }
 
-  article iframe {
+  article:not([data-disable-default-styles]) iframe {
     width: 100%;
     height: auto;
     aspect-ratio: 16 / 9;
   }
 
   /* Offsets padding */
-  article :is(section, h5, h6):target {
+  article:not([data-disable-default-styles]) :is(section, h5, h6):target {
     scroll-margin-top: var(--theme-navbar-height);
   }
 
   @media (min-width: 50em) {
-    :where(article, article section, article astro-slot) > :is(h1, h2) {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > :is(h1, h2) {
       position: sticky;
       top: 0;
       z-index: 3;
@@ -170,29 +223,54 @@ const { titleHeading } = Astro.props
       padding: var(--space-6x) 0;
     }
 
-    article section > :is(section, h5, h6):target {
+    article:not([data-disable-default-styles]) section > :is(section, h5, h6):target {
       scroll-margin-top: calc(var(--theme-navbar-height) + var(--space-20x));
     }
 
-    :where(article, article section, article astro-slot) > h3 {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > h3 {
       padding-top: var(--space-8x);
     }
 
-    :where(article, article section, article astro-slot) > h4 {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > h4 {
       padding-top: var(--space-6x);
     }
   }
 
   @media (min-width: 72em) {
-    :where(article, article section, article astro-slot) > h1 {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > h1 {
       font-size: 40px;
     }
 
-    :where(article, article section, article astro-slot) > h2 {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > h2 {
       font-size: 32px;
     }
 
-    :where(article, article section, article astro-slot) > h3 {
+    :where(
+        article:not([data-disable-default-styles]),
+        article:not([data-disable-default-styles]) section,
+        article:not([data-disable-default-styles]) astro-slot
+      )
+      > h3 {
       font-size: 28px;
     }
   }
