--- a/src/components/Resource/ResourceSection.module.css
+++ b/src/components/Resource/ResourceSection.module.css
@@ -2,5 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-8x);
-  margin: 56px 0;
+}
+
+@media screen and (max-width: 425px) {
+  .section {
+    gap: var(--space-6x);
+  }
 }
