--- a/src/components/ToolsUtilitiesGrid/toolsUtilities.module.css
+++ b/src/components/ToolsUtilitiesGrid/toolsUtilities.module.css
@@ -1,6 +1,3 @@
-.wrapper {
-  margin: 56px 0;
-}
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -53,5 +50,11 @@
 @media screen and (max-width: 525px) {
   .container {
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .container {
+    margin-top: var(--space-6x);
   }
 }
