--- a/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
@@ -17,11 +17,11 @@
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  box-shadow:
+  /*box-shadow:
     4.6px 9.3px 54px 1px rgba(152, 160, 185, 0.04),
     2.1px 4.3px 32px -0.7px rgba(152, 160, 185, 0.31),
     1px -1px 3px -0.3px rgba(152, 160, 185, 0.21),
-    0.3px 0.5px 0.8px 0px rgba(152, 160, 185, 0.12);
+    0.3px 0.5px 0.8px 0px rgba(152, 160, 185, 0.12);*/
   border: 1px solid var(--border);
 }
 
@@ -78,6 +78,14 @@
   display: flex;
   flex-direction: column;
   padding: var(--space-2x);
+}
+
+.groupItemDescription {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
