add journey cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,61 +1,12 @@
 ---
 import ProductTabs from "../features/landing/sections/ProductTabs.astro"
+import JourneyCards from "../features/landing/sections/JourneyCards.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
-import CardsWrapper from "~/components/Cards/CardsWrapper.astro"
-import type { ICard } from "~/components/Cards/types"
+import { Typography } from "@chainlink/blocks"
 
 const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
-
-const sample: ICard[] = [
-  {
-    title: "Deploy/enable a token across multiple chains",
-    description:
-      "Create a new Cross-Chain-Token or enable an established one that can be launched on 50+ chains, providing unparalleled interoperability and reach.",
-    links: [
-      {
-        icon: "token",
-        href: "https://example.com",
-        label: "View Token Manager",
-      },
-      {
-        icon: "remix",
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Bridge a token",
-    description:
-      "Securely transfer tokens - including ETH, USDC, LINK - and messages between different blockchain networks.",
-    links: [
-      {
-        icon: "token",
-        href: "https://example.com",
-        label: "View Token Manager",
-      },
-      {
-        icon: "remix",
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Send a token with data",
-    description:
-      "Build token transfers that do more than move value, letting you embed business logic directly into your cross-chain workflows.",
-    links: [
-      {
-        icon: "remix",
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-]
 ---
 
 <BaseLayout title={formattedContentTitle}>
@@ -68,18 +19,26 @@ const sample: ICard[] = [
         <ProductTabs />
       </div>
     </div>
-    <div class="recommended">
-      <h4>Recommended reading</h4>
-      <h2>We think you'd love to explore</h2>
-      <div>
-        <a href="/getting-started/conceptual-overview">General</a>
-        <a href="/resources/link-token-contracts">Link Token Contracts</a>
-        <a href="/ccip/getting-started">Getting Started with CCIP</a>
-        <a href="/ccip/directory">CCIP Directory</a>
-        <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
-        <a href="/data-feeds/smartdata/addresses">SmartData Feed Addresses</a>
-        <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
-        <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
+
+    <div class="wrapper">
+      <div class="section">
+        <Typography variant="h4" className="section-title">Start your Chainlink journey</Typography>
+        <JourneyCards />
+      </div>
+
+      <div class="recommended">
+        <h4>Recommended reading</h4>
+        <h2>We think you'd love to explore</h2>
+        <div>
+          <a href="/getting-started/conceptual-overview">General</a>
+          <a href="/resources/link-token-contracts">Link Token Contracts</a>
+          <a href="/ccip/getting-started">Getting Started with CCIP</a>
+          <a href="/ccip/directory">CCIP Directory</a>
+          <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
+          <a href="/data-feeds/smartdata/addresses">SmartData Feed Addresses</a>
+          <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
+          <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
+        </div>
       </div>
     </div>
   </main>
@@ -184,6 +143,23 @@ const sample: ICard[] = [
     background-color: var(--blue-100);
   }
 
+  .section-title {
+    font-size: 32px;
+    margin-bottom: var(--space-10x);
+  }
+
+  .section {
+    margin: 0 var(--space-6x);
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 82px;
+    max-width: var(--fullwidth-max-width);
+    margin: 0 auto;
+  }
+
   @media (min-width: 50em) {
     .hero {
       max-width: var(--fullwidth-max-width);
@@ -209,11 +185,6 @@ const sample: ICard[] = [
       font-weight: 600;
     }
 
-    .recommended {
-      margin: var(--space-16x) auto;
-      max-width: var(--fullwidth-max-width);
-    }
-
     .heroContainer {
       background: linear-gradient(180deg, #f1f5fe 0%, white 100%);
     }
@@ -228,14 +199,13 @@ const sample: ICard[] = [
       line-height: var(--space-6x);
       margin-bottom: var(--space-2x);
     }
+    .wrapper {
+      margin-top: 60px;
+    }
   }
   @media (min-width: 72em) {
-    .hero {
-      max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
-      padding: 0;
-    }
-
-    .recommended {
+    .hero,
+    .wrapper {
       max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
       padding: 0;
     }
