add tech standards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import ProductTabs from "../features/landing/sections/ProductTabs.astro"
 import JourneyCards from "~/components/JourneyCards/JourneyCards.astro"
+import TechnicalStandards from "~/components/TechnicalStandards/TechnicalStandards.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
@@ -24,6 +25,11 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
       <div class="section">
         <Typography variant="h4" className="section-title">Start your Chainlink journey</Typography>
         <JourneyCards />
+      </div>
+
+      <div class="section">
+        <Typography variant="h4" className="section-title">Technical Standards</Typography>
+        <TechnicalStandards />
       </div>
 
       <div class="recommended">
