--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import ProductTabs from "../features/landing/sections/ProductTabs.astro"
-import JourneyCards from "../features/landing/sections/JourneyCards.astro"
+import JourneyCards from "~/components/JourneyCards/JourneyCards.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
