--- a/src/components/TechnicalStandards/TechnicalStandards.astro
+++ b/src/components/TechnicalStandards/TechnicalStandards.astro
@@ -25,12 +25,12 @@ const cards = [
         <div class="card-body">
           <div class="card-text">
             <Typography variant="h5">{card.title}</Typography>
-            <Typography variant="body-s" color="muted">
+            <Typography variant="body-l" color="muted">
               {card.description}
             </Typography>
           </div>
-          <img src="/assets/icons/upper-right-arrow.svg" class="card-arrow" />
         </div>
+        <img src="/assets/icons/upper-right-arrow.svg" class="card-arrow" />
       </a>
     ))
   }
@@ -41,20 +41,18 @@ const cards = [
     display: grid;
     grid-template-columns: 1fr;
     gap: var(--space-6x);
+    border: 1px solid var(--border);
   }
 
   .standard-card {
     display: flex;
     flex-direction: column;
-    background-color: var(--muted);
-    border-radius: var(--space-2x);
-    overflow: hidden;
-    text-decoration: none;
-    transition: all 0.2s ease-in-out;
+    padding: var(--space-6x);
+    gap: var(--space-6x);
   }
 
   .standard-card:hover {
-    background-color: var(--gray-100);
+    background-color: var(--muted);
   }
 
   .standard-card:hover .card-arrow {
@@ -62,32 +60,38 @@ const cards = [
   }
 
   .card-image {
-    width: 100%;
-    height: 200px;
-    background-size: cover;
-    background-position: center;
+    width: 140px;
+    height: 140px;
+    background-size: 170%;
+    background-position: left;
     background-repeat: no-repeat;
+  }
+  .standard-card:first-child {
+    border-right: 1px solid var(--border);
+  }
+
+  .standard-card:first-child .card-image {
+    background-position: right;
   }
 
   .card-body {
     display: flex;
     flex-direction: column;
-    padding: var(--space-6x);
     gap: var(--space-4x);
+    flex: 1;
   }
 
   .card-text {
     display: flex;
     flex-direction: column;
-    gap: var(--space-2x);
+    gap: var(--space-4x);
   }
 
   .card-arrow {
-    height: 16px;
-    width: 16px;
+    height: 12px;
+    width: 12px;
     opacity: 0;
     align-self: flex-end;
-    transition: opacity 0.2s ease-in-out;
   }
 
   @media (min-width: 50em) {
@@ -97,11 +101,6 @@ const cards = [
 
     .standard-card {
       flex-direction: row;
-    }
-
-    .card-image {
-      width: 200px;
-      height: 100%;
     }
 
     .card-body {
