--- a/src/components/TechnicalStandards/TechnicalStandards.astro
+++ b/src/components/TechnicalStandards/TechnicalStandards.astro
@@ -40,7 +40,6 @@ const cards = [
   .technical-standards {
     display: grid;
     grid-template-columns: 1fr;
-    gap: var(--space-6x);
     border: 1px solid var(--border);
   }
 
@@ -49,6 +48,7 @@ const cards = [
     flex-direction: column;
     padding: var(--space-6x);
     gap: var(--space-6x);
+    align-items: start;
   }
 
   .standard-card:hover {
@@ -67,11 +67,11 @@ const cards = [
     background-repeat: no-repeat;
   }
   .standard-card:first-child {
-    border-right: 1px solid var(--border);
+    border-bottom: 1px solid var(--border);
   }
 
   .standard-card:last-child .card-image {
-    background-position: -55px;
+    background-position: -55px -50px;
   }
 
   .standard-card:first-child .card-image {
@@ -105,6 +105,11 @@ const cards = [
 
     .standard-card {
       flex-direction: row;
+    }
+
+    .standard-card:first-child {
+      border-right: 1px solid var(--border);
+      border-bottom: 0;
     }
 
     .card-body {
